Gnome-shell v47: Fix issue with modal dialogs spacing

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -190,6 +190,7 @@ $slider_size: 16px;
   color: $osd_fg_color;
   background-color: darken($osd_bg_color,5%);
   box-shadow: $depth6;
+  padding: 0 !important;
 
   .modal-dialog-content-box {
     margin: 10px 30px;
